Feat: add front-page.tex, header-footer.tex and preamble.tex files

--- a/latex/meeting-1.tex
+++ b/latex/meeting-1.tex
@@ -1,15 +1,10 @@
-%! Author = kenny-tinoco
-%! Date = 1/15/25
+\documentclass[12pt]{article}
 
-% Preamble
-\documentclass[11pt]{article}
+\input{preamble}
 
-% Packages
-\usepackage{amsmath}
+\input{header-footer}
 
-% Document
 \begin{document}
-
-lkjl
-
+    \input{front-page}
+    Hola
 \end{document}
