Update: meeeting-1 content

--- a/latex/meeting-1.tex
+++ b/latex/meeting-1.tex
@@ -6,5 +6,54 @@
 
 \begin{document}
     \input{front-page}
-    Hola
+
+    \section{Introducción}
+
+    El presente documento expone los aspectos generales de uso del ``Sistema web para la gestión del Colegio Bautista Libertad'',
+    este sistema tiene como objetivo digitalizar y optimizar los procesos internos de dicha institución.
+
+    Este documento se centra en los conocimientos generales que el cuerpo docente debe conocer para el uso correcto de esta herramienta, 
+    aborda puntos como: inicio de sesión en el sistema (correo y sistema de archivos), visualización de la información del docente e
+    ingreso de calificaciones.
+
+    En próximos encuentros se abordarán otros aspectos los cuales aún están en desarrollo y ajuste, previo a la utilización por parte de los usuarios.
+
+    \section{Desarollo}
+    
+    A continuación se detalla paso por paso como utilizar esta herramienta.
+    Para abreviar, en lo siguiente nos referiremos a ``Sistema web para la gestión del Colegio Bautista Libertad''
+    como ``WSMCBL'' por sus siglas en inglés\footnote{Web System for Managment of Colegio Bautista Libertad.} y
+    a ``Colegio Bautista Libertad'' como ``CBL''.
+    
+    \subsection{Inicio de sesión}
+
+    Como requisito para esta acción la administración de CBL deberá de suministrar un correo institucional y una contraseña para cada docente.
+
+    \begin{enumerate}
+        \item Ingresar a la página oficial de CBL por medio del enlace \href{www.cbl-edu.com}{cbl-edu.com}.
+        \item Dirigirse a la parte superior derecha y seleccionar la opción ``WSM CBL'', este lo redirigirá hacía \href{wsm.cbl-edu.com}{wsm.cbl-edu.com}.
+        \item Ingresar el correo institucional de CBL y su contraseña.
+    \end{enumerate}
+
+
+    \subsection{Registro de calificaciones}
+    Como requisito para esta acción la administración de CBL deberá habilitar el registro de calificaciones para
+    el parcial en curso, en caso contrario el docente no podrá registrar ninguna calificación, sin embargo, si podrá visualizar las calificaciones ya ingresadas.
+
+    \begin{enumerate}
+        \item Iniciar sesión en WSMCBL (seguir los pasos anteriores).
+        \item Dirigirse a la parte izquierda de la pantalla y seleccionar la opción ``Académico'' y luego la opción ``Calificar''.
+        \item Se muestra la lista de las secciones donde el docente imparte.
+        \item Seleccionar la opción ``Calificar'' en una de las secciones.
+        \item Se muestra la información de la sección, como la lista de estudiantes, la lista de asignaturas que el docente imparte en dicha sección y los campos para el ingreso de los datos.
+        \item Ingresar la calificación estudiante por estudiante y al final de la tabla ingresar la calificación de conducta.
+        \item Seleccionar guardar.
+    \end{enumerate}
+
+    Un punto importante a señalar es que la conducta ingresada en el caso de que un docente tenga más de una asignatura en la sección, será compartida por todas las asignaturas.
+
+    \section{Conclusión}
+
+    Debido a la forma de operar del Colegio Bautista Libertad este sistema trata de ser lo menos invasivo con respecto
+    a los docentes, con lo cual esta herramienta solo necesita que el cuerpo docente provea de manera íntegra los datos de calificaciones para cada uno de sus estudiantes en tiempo y forma.
 \end{document}
