--- a/latex/front-page.tex
+++ b/latex/front-page.tex
@@ -1,19 +1,17 @@
 \begin{center} \textbf
 {
-    \Large Ecuaciones Diofánticas \\ \vspace{2mm}Clase \#x
+    \Large Capacitación para uso del\\ ``Sistema web para gestión del Colegio Bautista Libertad''\\ (Parte docente)
 }
 \end{center}
 
 \begin{multicols}{2}
 {
-    \textbf{Encuentro:} x\\
-    \textbf{Curso:} Ecuaciones Diofánticas\\
-    \textbf{Fecha:} x de x de 2024\\
+    \textbf{Encuentro:} 1\\
+    \textbf{Fecha:} 16 de enero de 2025\\
     \begin{flushright}
-        \textbf{Nivel:} 5\\
-        \textbf{Semestre:} II\\
-        \textbf{Instructor:} Kenny Jordan Tinoco\\
-        \textbf{Instructor Aux:} Gema Tapia
+        \textbf{Elaborado por:}\\
+        Kenny Jordan Tinoco\\
+        Ezequiel de Jesús Urbina
     \end{flushright}
 }
 \end{multicols}
