--- a/latex/header-footer.tex
+++ b/latex/header-footer.tex
@@ -1,7 +1,7 @@
 \pagestyle{fancy}
 
 \fancyhead[L]{Kenny J. Tinoco}
-\fancyhead[R]{Ecuaciones Diofánticas}
+\fancyhead[R]{}
 %\fancyhead[C]{Nivel V}
 \fancyfoot[C]{Pág. \thepage}
 
@@ -12,7 +12,7 @@
     {
         \textbf
         {
-            \LARGE Academia Sabatina de Jóvenes Talento \vspace{2mm}
+            \LARGE Colegio Bautista Libertad \vspace{2mm}
         }
     }
     \rhead{}
