--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -5,10 +5,13 @@
 \usepackage[left=2.5cm, right=2.5cm, top=2cm, bottom=2cm]{geometry}
 \usepackage{multicol}
 \usepackage{tasks}
+\usepackage{hyperref}
 
+\usepackage{tocloft}
+\hypersetup{colorlinks=true,linkcolor=black,urlcolor=blue,citecolor=blue}
 \settasks{label=\Alph*)}
 
-\renewcommand{\normalsize}{\fontsize{13}{15}\selectfont} %propuesta 1 (13.5, 16)
+\renewcommand{\normalsize}{\fontsize{13}{17}\selectfont} %propuesta 1 (13.5, 16)
 %\renewcommand{\normalsize}{\fontsize{13}{15.5}\selectfont} %propuesta 2 (13, 15.5)
 
 \setlength{\parskip}{1.7mm}
