Update: meeeting-1 content

--- a/latex/header-footer.tex
+++ b/latex/header-footer.tex
@@ -1,8 +1,8 @@
 \pagestyle{fancy}
 
-\fancyhead[L]{Kenny J. Tinoco}
-\fancyhead[R]{}
-%\fancyhead[C]{Nivel V}
+\fancyhead[L]{Encuentro \#1}
+\fancyhead[R]{Kenny J. Tinoco}
+\fancyhead[C]{wsmcbl}
 \fancyfoot[C]{Pág. \thepage}
 
 \fancypagestyle{first-page-style}
