Feat: update meeeting-2 document

--- a/latex/meeting-2/meeting-2.tex
+++ b/latex/meeting-2/meeting-2.tex
@@ -2,12 +2,19 @@
 
 \input{preamble}
 
-\input{header-footer}
-
 \begin{document}
-    \input{front-page}
+    \begin{multicols}{2}
+        \textbf{Encuentro:} 2\\
+        \textbf{Fecha:} 4 de abril de 2025\\
+        \begin{flushright}
+            \textbf{Elaborado por:}\\
+            Kenny Jordan Tinoco\\
+            Ezequiel de Jesús Urbina
+        \end{flushright}
+    \end{multicols}
 
     \tableofcontents
+    \thispagestyle{fancy}
 
     \section{Introducción}
 
