--- a/latex/meeting-2/preamble.tex
+++ b/latex/meeting-2/preamble.tex
@@ -1,19 +1,43 @@
-\usepackage{mlmodern}
-\usepackage[T1]{fontenc}
-\usepackage[spanish]{babel}
+\usepackage{ulem}
+\usepackage{float}
+\usepackage{graphicx}
 \usepackage{fancyhdr}
-\usepackage[left=2.5cm, right=2.5cm, top=2cm, bottom=2cm]{geometry}
+\usepackage{setspace}
+\usepackage[hidelinks]{hyperref}
+\usepackage[spanish]{babel}
+\usepackage{mlmodern}
+\usepackage{longtable}
+\usepackage{tabularx}
 \usepackage{multicol}
-\usepackage{tasks}
-\usepackage{hyperref}
+\usepackage[T1]{fontenc}
+\usepackage[left=2cm, right=2cm, top=4cm, bottom=2.5cm, headheight=2cm, headsep=1cm]{geometry}
+\renewcommand{\normalsize}{\fontsize{13}{18}\selectfont}
 
-\usepackage{tocloft}
-\hypersetup{colorlinks=true,linkcolor=black,urlcolor=blue,citecolor=blue}
-\settasks{label=\Alph*)}
-
-\renewcommand{\normalsize}{\fontsize{13}{17}\selectfont} %propuesta 1 (13.5, 16)
-%\renewcommand{\normalsize}{\fontsize{13}{15.5}\selectfont} %propuesta 2 (13, 15.5)
+\pagestyle{fancy}
+\fancyhead[C]
+{
+    \makebox[\textwidth]{
+        \hspace{-0.2\textwidth}
+        \begin{minipage}[c][2.5cm]{0.2\textwidth}
+            \includegraphics[width=2.5cm]{logo}
+        \end{minipage}
+        \hspace{0.01\textwidth}
+        \begin{minipage}[c][2.5cm]{0.6\textwidth}
+            \centering
+            \textbf{\LARGE Colegio Bautista Libertad}\\[0.2cm]
+            \textbf{\Large Capacitación docente 2025}\\
+            Contacto: soporte@cbl-edu.com
+        \end{minipage}
+    }
+}
+\fancyhead[L]{}
+\fancyhead[R]{}
+\fancyfoot[C]{Pág. \thepage}
 
 \setlength{\parskip}{1.7mm}
 \setlength{\parindent}{0pt}
-\setlength{\headsep}{3.5mm}
+
+\renewcommand{\headrulewidth}{0pt}
+
+\usepackage{tocloft}
+\hypersetup{colorlinks=true,linkcolor=black,urlcolor=blue,citecolor=blue}
