--- a/latex/meeting-2/preamble.tex
+++ b/latex/meeting-2/preamble.tex
@@ -11,7 +11,7 @@
 \usepackage{multicol}
 \usepackage[T1]{fontenc}
 \usepackage[left=2cm, right=2cm, top=4cm, bottom=2.5cm, headheight=2cm, headsep=1cm]{geometry}
-\renewcommand{\normalsize}{\fontsize{13}{18}\selectfont}
+\renewcommand{\normalsize}{\fontsize{13}{15}\selectfont}
 
 \pagestyle{fancy}
 \fancyhead[C]
@@ -41,3 +41,8 @@
 
 \usepackage{tocloft}
 \hypersetup{colorlinks=true,linkcolor=black,urlcolor=blue,citecolor=blue}
+
+\newcommand{\stepTitle}{\textbf{\large Pasos}\par}
+\newcommand{\step}[1]{\par\textbf{Paso #1.}}
+\newcommand{\wsm}{\textit{wsmcbl} }
+\newcommand{\quations}[1]{``#1'' }
