Update: meeeting-2 document

--- a/latex/meeting-2/meeting-2.tex
+++ b/latex/meeting-2/meeting-2.tex
@@ -18,7 +18,7 @@
 
     \section{Introducción}
 
-    El presente documento expone los caso de usos más importantes de \wsm
+    El presente documento expone los casos de usos más importantes de \wsm.
 
     Este documento aborda los aspectos que el cuerpo docente debe conocer para el uso correcto de
     esta herramienta, se abordan los aspectos de inicio de sesión en el sistema, ver sección guiada, registro de
@@ -29,107 +29,92 @@
     En esta sección veremos como interactuar con los casos de usos del sistema.
     Se necesita un dispositivo con accesos a internet, de preferencia una computadora.
 
-    \newpage
-    \subsection{Inicio de sesión}
+    \subsection{Iniciar sesión}
 
-    Para el inicio de sesión se requiere credenciales del usuario, si no las tiene la administración de CBL se la suministrará.
+    Para el inicio de sesión se requiere credenciales del usuario, si no las tiene la administración de \cbl se la suministrará.
 
-    \textbf{\large Pasos}\par
+    \stepTitle
 
-    \step{1} Ingrese a la página oficial de CBL por medio del enlace \href{www.cbl-edu.com}{cbl-edu.com}.
-
-    \step{2} Diríjase a la parte superior derecha y seleccionar la opción ``WSM CBL''.
+    \step{1} Ingrese a la página oficial de \cbl por medio del enlace \href{www.cbl-edu.com}{cbl-edu.com}.
+    \step{2} Diríjase a la parte superior derecha y seleccione la opción \quations{WSM CBL}.
     Esta opción lo llevará hacía \href{wsm.cbl-edu.com}{wsm.cbl-edu.com}.
 
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{image/login.01}
-        \caption{Paso 1 y 2.}
-        \label{fig:login1}
-    \end{figure}
-
-    \step{3} Ingrese el correo institucional de CBL y su contraseña. Ver figura 2.
-
+    \step{3} Ingrese el correo institucional de \cbl y su contraseña. Ver figura 2.
     \step{4} Se ingresa a su perfil en \wsm. Ver figura 3.
 
-    Es preciso indicar que todo lo realizado en \wsm es parte de la información interna del colegio.
+    %\begin{figure}[H]
+    %    \centering
+    %    \includegraphics[width=\textwidth]{image/login.01}
+    %    \caption{Paso 1 y 2.}
+    %    \label{fig:login1}
+    %\end{figure}
+
+    \textbf{Nota:} Todo lo realizado en \wsm es parte de la información interna del colegio.
     Esto no será visible al público por medio del sitio web.
-    Por tanto, es de suma importancia \textbf{no compartir sus credenciales} con ninguna persona para asegurar la integridad de los datos de la institución.
+    Por tanto, es de suma importancia \textbf{no compartir sus credenciales} con ninguna persona, para salvaguardar la
+    integridad de los datos en la institución.
+
     Si perde sus credenciales recurra a dirección o bien al correo \href{mailto:soporte@cbl-edu.com}{soporte@cbl-edu.com}
     para ayudarle con su caso.
 
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{image/login.02}
-        \caption{Paso 3.}
-        \label{fig:login2}
-    \end{figure}
-
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{image/login.03}
-        \caption{Paso 4.}
-        \label{fig:login3}
-    \end{figure}
-
-
     \subsection{Ver sección guiada}
 
-    Para este caso de uso el docente debe tener una sección guida.
-    Si no tiene asignada una sección esta opción se muestra vacía.
+    El docente necesita conocer la información completa de su sección guiada.
+    Para este caso de uso el docente debe tener asignada una sección, en caso contrario esté caso de uso se muestra vacío.
 
-    \textbf{\large Pasos}\par
-
+    \stepTitle
     \step{1} Iniciar sesión en el sistema.
-    \step{2} Diríjase a la barra lateral izquierda y seleccione la opción ``Sección Guidada''.
-
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=\textwidth]{image/view.enrollment.guide.01}
-        \caption{Paso 1.}
-    \end{figure}
-
-    \step{3} Se muestra la información de la sección guíada.
+    \step{2} Diríjase a la barra lateral izquierda y seleccione la opción \quations{Sección Guiada}.
+    \step{3} Se muestra la información de la sección guiada.
     \begin{itemize}
-        \item Cantidad de estudiantes, capacidad de la sección y la distribución entre varones y mujeres.
+        \item Cantidad de estudiantes.
+        \item Cantidad de varones y mujeres.
+        \item Capacidad de la sección.
         \item Lista oficial de estudiantes.
-        \item Lista de asignaturas y su docente responsable.
+        \item Lista de asignaturas y docente correspondiente.
     \end{itemize}
 
 
 
-    \subsection{Ver información del estudiante}
+    \subsection{Ver perfil del estudiante}
 
-    Como responsable una sección un docente necesita el acceso a la información de cada estudiante.
+    El docente necesita conocer la información de cada estudiante en su sección guiada.
     El sistema \wsm registra los datos más importantes en el proceso de matrícula y el docente puede acceder a ella.
 
     \stepTitle
 
-    \step{1} Ingresar a la ventana de sección guiada.
-    \step{2} Elija un estudiante y selecciones los tres puntos en la parte derecha.
-    \step{3} Seleccione la opción \quations{Ver perfil}.
+    \step{1} Iniciar sesión en el sistema.
+    \step{2} Ingresar a la ventana de sección guiada.
+    \step{3} Elija un estudiante y seleccione los tres puntos en la parte derecha.
+    \step{4} Seleccione la opción \quations{Ver perfil}.
 
 
-    \subsection{Actualizar información de estudiantes}
+    \subsection{Actualizar perfil del estudiante}
 
-    Al inicio de cada año lectivo se revisa y ajusta la información de cada estudiante para garantizar la integridad de los datos.
-    El sistema \wsm permite que los docentes puedan actualizar la información de cada estudiante en su sección guiada.
+    Al inicio de año lectivo se revisa y ajusta la información de cada estudiante para garantizar la integridad de los datos.
+    El sistema \wsm permite a los docentes guías actualizar los perfiles de estudiantes en su sección.
 
     \stepTitle
-    \step{1} Ingresar a la ventana de sección guiada.
+    \step{1} Iniciar sesión en el sistema.
     \step{2} Ingrese al perfil de un estudiante.
     \step{3} Actualize los datos.
-    \step{4} Seleccione actualizar.
+    \step{4} Seleccione \quations{Actualizar datos}.
 
-    \textbf{Nota:} La opción de actualizar la información de estudiantes no está habilitada por defecto.
-    Es necesario que dirección autorice y conceda el permiso a los usuarios.
+    \textbf{Nota:} La opción de actualizar perfil de estudiante no está habilitada por defecto.
+    Es necesario que dirección autorice y conceda el permiso a los docentes.
 
 
     \subsection{Registrar calificaciones}
 
-    Para registrar calificaciones se necesita que el parcial en curso tenga su \textbf{registro de calificaciones} activo,
-    En caso contrario ninguna calificación se registra.
-    Sin embargo, visualizar las calificaciones ya registradas sí es posible sin necesidad del registro de calificaciones activo.
+    Para registrar calificaciones del parcial actual se necesita que esté activa la propiedad \textbf{registro de calificaciones}.
+    En caso contrario ninguna calificación se registra en el sistema.
+    Sin embargo, las calificaciones ya registradas se visualizan sin necesidad de esta propiedad activada.
+    Esto será así para calificaciones del parcial actual o anteriores.
+
+    Cada parcial tiene la propiedad \textbf{registro de calificaciones}.
+    Esto es un rango de tiempo en el cual los docentes pueden ingresar y modificar las notas de los estudiantes.
+    Este rango puede ser desde \textit{una hora} hasta \textit{quince días}, la duración lo decide dirección.
+
 
     \stepTitle
     \step{1} Iniciar sesión en el sistema.
@@ -159,27 +144,26 @@
     Si no ingresa las calificaciones de uno o más estudiantes, \wsm establece a cero como calificación por defecto.
     Esto nos da la facilidad de no ingresar todas las calificaciones desde el inicio y realizarlo de manera paulatina.
 
-    \subsection{Ver historia (registro)}
+    \subsection{Ver informe de calificaciones}
 
-    Como docente guía se necesita conocer el desempeño de los estudiantes en sus distintas asignaturas.
-    El sistema \wsm permite obtener estos datos de manera sintetizada.
-    Esto con el fin de reducir el trabajo que el docente de realizar en cada corte evaluativo.
+    El docente guía necesita conocer el desempeño de los estudiantes en sus distintas asignaturas.
+    El sistema \wsm calcula promedios y estadísticas automáticamente, y el docente puede obtenerlos.
+    Esto reduce el trabajo que se realiza en cada corte evaluativo.
 
     \stepTitle
     \step{1} Iniciar sesión en el sistema.
-    \step{2} Diríjase a la barra lateral izquierda y seleccione la opción \quations{Registro}.
-    \step{3} Se muestra tres pestañas
+    \step{2} Diríjase a la barra lateral izquierda y seleccione la opción \quations{Informe de calificaciones}.
+    \step{3} Se muestra tres pestañas, las cuales muestran los datos referentes al parcial actual.
     \begin{itemize}
-        \item Top: Muestra el promedio de los cuatro parciales para cada estudiante.
-        \item Sabana: Muestra el detallado de calificaciones para cada estudiante en el parcial actual.
-        \item Estadística: Muestra estadísticas de las calificaciones por parcial.
+        \item Rendimiento: Muestra el promedio de los cuatro parciales para cada estudiante.
+        \item Sabana: Muestra el detallado de calificaciones para cada estudiante.
+        \item Estadística: Muestra estadísticas mined de estudiantes y calificaciones.
     \end{itemize}
 
     Estos datos pueden ser solicitados por parcial en cualquier momento, con lo cual es posible realizar un análisis
     de desempeño de los estudiantes.
 
 
-    \newpage
     \section{Conclusión}
 
     Debido a la forma de operar del Colegio Bautista Libertad este sistema trata de ser lo menos invasivo con respecto
