--- a/latex/meeting-2/preamble.tex
+++ b/latex/meeting-2/preamble.tex
@@ -42,7 +42,8 @@
 \usepackage{tocloft}
 \hypersetup{colorlinks=true,linkcolor=black,urlcolor=blue,citecolor=blue}
 
-\newcommand{\stepTitle}{\textbf{\large Pasos}\par}
+\newcommand{\stepTitle}{\par\hspace{2mm}\\\textbf{\large Pasos}\par}
 \newcommand{\step}[1]{\par\textbf{Paso #1.}}
 \newcommand{\wsm}{\textit{wsmcbl} }
+\newcommand{\cbl}{\textit{cbl} }
 \newcommand{\quations}[1]{``#1'' }
